[build-system]
# SetupTools
requires = ["setuptools>66", "setuptools-scm"]
build-backend = "setuptools.build_meta"
# Flit
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
# Hatchling
#requires = ["hatchling"]
#build-backend = "hatchling.build"
# PDM-Backend
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[project]
name = "ssvc"
authors = [
    { name = "Allen D. Householder", email="adh@cert.org" },
    { name = "Vijay Sarvepalli", email="vssarvepalli@cert.org"}
]
description = "Tools for working with a Stakeholder Specific Vulnerability Categorization (SSVC)"
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.8"
keywords =["ssvc","vulnerability management","vulnerability management"]
license = {file="LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mkdocs","mkdocs-material","mkdocs-material-extensions","mkdocstrings","mkdocstrings-python",
    "mkdocs-include-markdown-plugin", "pandas","scipy", "dataclasses-json", "jsonschema"
]
dynamic = ["version",]

[project.scripts]
ssvc_csv_analyzer="ssvc.csv_analyzer:main"

[project.urls]
"Homepage" = "https://certcc.github.io/SSVC"
"Project" = "https://github.com/CERTCC/SSVC"
"Bug Tracker" = "https://github.com/CERTCC/SSVC/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ssvc*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]
version_file = "ssvc/_version.py"
root = ".."
relative_to = "pyproject.toml"


#[tools.setuptools.dynamic]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]