[build-system]
# SetupTools
requires = ["setuptools>66", "setuptools-scm"]
build-backend = "setuptools.build_meta"
# Flit
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"
# Hatchling
#requires = ["hatchling"]
#build-backend = "hatchling.build"
# PDM-Backend
#requires = ["pdm-backend"]
#build-backend = "pdm.backend"

[project]
name = "certcc-ssvc"
authors = [
    { name = "CERT/CC SSVC", email="cert+ssvc@cert.org" },
]
description = "Tools for working with a Stakeholder Specific Vulnerability Categorization (SSVC)"
readme = {file="README.md", content-type="text/markdown"}
requires-python = ">=3.12"
keywords =["ssvc","vulnerability management","vulnerability management"]
license = {file="LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version","dependencies"]


[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
ssvc_csv_analyzer="ssvc.csv_analyzer:main"
ssvc_doctools="ssvc.doctools:main"

[project.urls]
"Homepage" = "https://certcc.github.io/SSVC"
"Project" = "https://github.com/CERTCC/SSVC"
"Bug Tracker" = "https://github.com/CERTCC/SSVC/issues"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ssvc*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools_scm]
version_file = "ssvc/_version.py"
root = ".."
relative_to = "pyproject.toml"
local_scheme = "no-local-version"
version_scheme = "no-guess-dev"

#[tools.setuptools.dynamic]

[tool.black]
line-length = 79
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "test",
]

[dependency-groups]
dev = [
    "linkchecker>=10.6.0",
    "pytest>=8.4.1",
]
